--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
 services:
   - postgresql
 before_install:
-  - bundle lock --add-platform x86_64-linux
+  - gem update bundler
 before_script:
   - bundle install --jobs=3 --retry=3
   - yarn
@@ -13,3 +13,4 @@ before_script:
   - bundle exec rake db:schema:load
 script:
   - bundle exec rspec spec
+  - bundle exec rubocop
